This is the Changelogs for GregTech6-Unofficial

6.13.02: (Not released yet).
Nothing

6.13.01: (Not released yet).
Nothing

6.13.00: (Not released yet).
[CHANGED]Temperature of plasma set to 4000K
[CHANGED]Implosion Compressor now accept EU to do process.
[CHANGED]The Matter Replicators are working 2 times than before.
[CHANGED]For MultyBlock Heat Exchanger now need Thermomechanical Block.
[CHANGED]Now Distillation Tower need 3x3x12 Distillation Tower Parts to build.
[CHANGED]Fusion now accept energy LU to do process.And it dont output energy now.Some of its recipes now output plasma.
[CHANGED]Cryo Distillation Tower now use Frost Proof Machine Casing instead of Distillation Tower Part
[CHANGED]Engine recipe now use medium pipe.Iridium Engine now output 1024RU.Tungsten now output 512RU and its efficiency is a little more than tungstensteel Engine
[CHANGED]
Now MultiBlock Heat Exchanger has 3 texture to build.
TungstenSteel/Tungsten/Tantalum Hafnium Carbide.
They can output HU:16384/32768/131072.
[CHANGED]
Now when you put molten metal to the tank the temperature will drop and you can no longer output it.
If the temperature drops below melting point you need to heat the tank in order to melt the metal.
[ADDED]Naphtha Ethene and gas oil for cracking product.
[ADDED]Frost Proof Machine Casing for Cryo Distillation Tower build.
[ADDED]Thermomechanical block for Heat Exchanger
[ADDED]Reactors can use Distilled Water as Coolant, but that uses a different System so beware.From Original GT6 Version
[ADDED]
Assembler for Circult processing!And it has some other assembly recipes by Greg.
[ADDED]
Titanium Niobium Carbide.You can use it for crucible(And Large crucible)Large Boiler, tools pipe and tank.
Its pipe and tank can store plasma too.
[ADDED]
MultyBlock Engine Turbine.
Build like gas/steam turbine.It uses Engine fuels.Its a MultyBlock for Diesel Engine
[ADDED]
MultyBlock Plasma Turbine.