@@ -1172,9 +1172,9 @@ public class MT {
 	Aredrite                = metalore      ( 8701, "Aredrite"                                      , 255, 255,   0, 255).put(MOLTEN).qual(2, 6.0,   64,  2)                                                                                                                                                                                                                                                                        .aspects(TC.STRONTIO, 1).visDefault(),
 	Alumite                 = alloymachine  ( 8702, "Alumite"                                       , 230, 100, 230, 255).put(MOLTEN).qual(2, 1.5,   64,  0)                                                                                                            .setMcfg( 9, Al             , 5*U, WroughtIron      , 2*U, Obsidian         ,18*U)                                                                          .aspects(TC.STRONTIO, 2).alloyCentrifuge(),
 	Manyullyn               = alloymachine  ( 8703, "Manyullyn"                                     , 175, 100, 175, 255).put(MOLTEN).qual(2, 2.0,   96,  1)                                                                                                            .setMcfg( 0, Co             , 1*U, Ardite           , 1*U)                                                                                                  .aspects(TC.STRONTIO, 2).alloyCentrifuge(),
-	VibraniumSteel          = slloymachine  ( 8704, "Vibranium Steel"                               ,  40,  24,  50, 255).put(CENTRIFUGE, MAGNETIC_PASSIVE).qual(3,   50.0, 2048, 10)                                                                                   .uumMcfg( 0, Vb             , 1*U, Steel            , 3*U)                                                                                                  .aspects(TC.SENSUS, 1, TC.VITREUS, 1, TC.METALLUM, 1).alloyCentrifuge().visDefault(Vb),
-	VibraniumSilver         = slloy         ( 8705, "Vibranium Silver"                              , 240, 240, 255, 255).put(CENTRIFUGE, ENDER_DRAGON_PROOF).qual(3,  100.0,  512,  9)                                                                                 .uumMcfg( 0, Vb             , 1*U, Ag               , 3*U)                                                                                                  .aspects(TC.SENSUS, 1, TC.VITREUS, 1, TC.LUCRUM, 1).alloyCentrifuge().visDefault(Vb),
-	Vibramantium            = slloymachine  ( 8706, "Vibramantium"                                  , 250, 250, 250, 255).put(CENTRIFUGE, MAGNETIC_PASSIVE).qual(3, 1000.0, 5120, 15)                                                                                   .uumMcfg( 0, Vb             , 1*U, Ad               , 3*U)                                                                                                  .aspects(TC.SENSUS, 1, TC.VITREUS, 1, TC.PRAECANTIO, 1, TC.METALLUM, 1).alloyCentrifuge().visDefault(Vb),
+	VibraniumSteel          = slloymachine  ( 8704, "Vibranium Steel"                               ,  40,  24,  50, 255).put(CENTRIFUGE, MAGNETIC_PASSIVE).qual(3,   50.0, 2048, 10)                                                                                   .uumMcfg( 0, Vb             , 1*U, Steel            , 3*U)                                                                                                  .aspects(TC.SENSUS, 1, TC.VITREUS, 1, TC.METALLUM, 1).alloyCentrifuge(),
+	VibraniumSilver         = slloy         ( 8705, "Vibranium Silver"                              , 240, 240, 255, 255).put(CENTRIFUGE, ENDER_DRAGON_PROOF).qual(3,  100.0,  512,  9)                                                                                 .uumMcfg( 0, Vb             , 1*U, Ag               , 3*U)                                                                                                  .aspects(TC.SENSUS, 1, TC.VITREUS, 1, TC.LUCRUM, 1).alloyCentrifuge(),
+	Vibramantium            = slloymachine  ( 8706, "Vibramantium"                                  , 250, 250, 250, 255).put(CENTRIFUGE, MAGNETIC_PASSIVE).qual(3, 1000.0, 5120, 15)                                                                                   .uumMcfg( 0, Vb             , 1*U, Ad               , 3*U)                                                                                                  .aspects(TC.SENSUS, 1, TC.VITREUS, 1, TC.PRAECANTIO, 1, TC.METALLUM, 1).alloyCentrifuge(),
 	Signalum                = alloymachine  ( 8708, "Signalum"                                      , 255,  64,   0, 255).put(MOLTEN, FURNACE, EXTRUDER_SIMPLE)                                                                                                         .uumMcfg( 8, Cu             , 1*U, Ag               , 2*U, RedAlloy         , 5*U)                                                                          .aspects(TC.METALLUM, 3, TC.POTENTIA, 1).alloyCentrifuge(),
 	Lumium                  = slloymachine  ( 8709, "Lumium"                                        , 255, 255,  80, 255).put(MOLTEN, FURNACE, EXTRUDER_SIMPLE, LIGHTING, GLOWING)                                                                                      .uumMcfg( 4, Sn             , 3*U, Ag               , 1*U, Glowstone        , 4*U)                                                                          .aspects(TC.METALLUM, 3, TC.LUX, 1).alloyCentrifuge(),
 	EnderiumBase            = alloymachine  ( 8729, "Enderium Base"                                 ,  53,  85, 108, 255).put(MOLTEN, MD.EIO)                                                                                                                           .uumMcfg( 4, Sn             , 2*U, Ag               , 1*U, Pt               , 1*U)                                                                          .aspects(TC.METALLUM, 3).alloyCentrifuge(),
